--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
             <br>
             <div class="footer-third" style="right: 0;">
                 <button class="backToTop" title="Back To Top" onclick="topFunction()" id="topBtn"><i
-                        class='bx bx-up-arrow-alt' style="color: blue; font-size:4.5rem;"></i></button>
+                        class='bx bx-up-arrow-alt' style="color: blue; font-size:4.5rem;cursor:pointer"></i></button>
             </div>
 
 
