--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <span id="element" class="typing"></span>
                 <div class="buttons">
-                    <button class="btn" onclick="window.location.href = 'https://drive.google.com/file/d/112xGt8MBL0KsNAu_trqgqUEsKwd43BNj/view?usp=sharing';">Download
+                    <button class="btn" onclick="window.location.href = 'https://brown-robby-97.tiiny.site';">Download
                         Resume <i class='bx bx-download' style="font-size:1.05em"></i></button>
                     <button class="btn1"
                         onclick="window.location.href = 'https://www.linkedin.com/in/ayush-agarwal-3aba67210/';">Visit
