--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="rightSection">
 
                 <div class="profilePhoto">
-                    <img src="./1675874823588-fotor-2023072816382.png" alt="pic">
+                    <img src="./aboutMePic.png" alt="pic">
                     <span class="circle-spin"></span>
                 </div>
 
@@ -86,9 +86,7 @@
         <hr class="hrLine">
 
         <section class="aboutSection" id="about">
-            <div class="about-img">
-                <img src="./aboutMePic.png" alt="">
-            </div>
+           
             <div class="about-content">
                 <h2 class="aboutHeading">About <span class="aboutMe">Me👇</span></h2>
                 <h3>FullStack Developer</h3>
