--- a/index.html
+++ b/index.html
@@ -227,14 +227,14 @@
                         <div class="card1">
                             <img src="./PicsArt_08-03-11.30.43.jpg" alt="Northland"
                                 style="width:100%; border-radius:16px">
-                            <h1>NorthLand Budget Tool</h1>
+                            <h1>ReactJS Bookshelf Application</h1>
 
-                            <p style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;margin: 5px 0 0 0;">Budget Estimation
-                                Web Application for Northland Investment Corporation using NodeJS, AngularJS and MongoDB
+                            <p style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;margin: 5px 0 0 0;">Personalized bookshelf with filters like
+                                authore, genres, year and rating etc. Also, add and remove the book from your collections.
                             </p>
                             <br>
                             <button class="card-btn1"
-                                onclick="window.location.href='https://github.com/AyushAgarwaal/NorthLand-Budget-Estimation.git';">View
+                                onclick="window.location.href='https://github.com/AyushAgarwaal/MyBookShelfApp.git';">View
                                 Project <i class='bx bx-right-arrow-alt' style="font-size: 0.95em;"></i></button>
                         </div>
                     </div>
