--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                             <h1>ReactJS Bookshelf Application</h1>
 
                             <p style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;margin: 5px 0 0 0;">Personalized bookshelf with filters like
-                                authore, genres, year and rating etc. Also, add and remove the book from your collections.
+                                authore, genres, year and rating etc.
                             </p>
                             <br>
                             <button class="card-btn1"
