--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <div class="row">
                     <div class="column">
                         <div class="card1">
-                            <img src="./PicsArt_08-03-11.30.43.jpg" alt="Northland"
+                            <img src="https://ibb.co/N7vCjkF" alt="Northland"
                                 style="width:100%; border-radius:16px">
                             <h1>ReactJS Bookshelf Application</h1>
 
