--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                 <h3>FullStack Developer</h3>
                 <p>Currently, I am a Computer Science Undergraduate from <b>Sharda University</b> and a technology
                     enthusiast
-                    too. I have work on projects based on <span class="languages">Java, AngularJS, NodeJS, HTML &
-                        CSS.</span> I am very much passionate
+                    too. I have work on projects based on <span class="languages">Java, JavaScript, AngularJS, NodeJS, HTML &
+                        CSS, Selenium Automation, Appium, AWS, CI/CD, Jenkins, Mongodb and Git etc.</span> I am very much passionate
                     about Digital and New-Age Technologies. Currently, I am working on MEAN stack development on a
-                    project. I have been intern with<b> Credex Technology</b>, Noida for about 6 months. Now, I am
+                    project. I have been intern with<b> Lambdatest India</b>, Noida for about 6 months as an Software Intern. Now, I am
                     looking for
                     challenging roles and excited to contribute my skills to create innovative real time projects and be
                     an valuable asset to an organization.</p>
