--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="rightSection">
 
                 <div class="profilePhoto">
-                    <img src="./aboutMePic.png" alt="pic">
+                    <img src="./testmu-2024.png" alt="pic">
                     <span class="circle-spin"></span>
                 </div>
 
